--- a/nani-web/pom.xml
+++ b/nani-web/pom.xml
@@ -177,6 +177,11 @@
         </dependency>
         -->
         <!-- == End Coding Support == -->
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.2</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
